--- a/BOT to like_ or_retweet a string.ipynb
+++ b/BOT to like_ or_retweet a string.ipynb
@@ -47,7 +47,7 @@
     "nrtweets=int(input(\"enter the no. of times you want the tweet to get liked : \"))\n",
     "for tweet in tweepy.Cursor(api.search,search).items(nrtweets):\n",
     "    try:\n",
-    "        print(\"Kardiya Like \")\n",
+    "        print(\" Liked the tweet \")\n",
     "        tweet.favorite()\n",
     "        time.sleep(2)\n",
     "    except tweepy.TweepError as e:\n",
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prinpagal hai\")"
+    "")"
    ]
   },
   {
